Header: align w/layout gutter; maps: fix empty BG on smallish screens

--- a/components/header/MobileNav.module.css
+++ b/components/header/MobileNav.module.css
@@ -88,6 +88,7 @@
 
 .burger button {
   font-size: 1.5rem;
+  padding-right: 0; /* root or parent elem has horiz. padding already */
 }
 
 @media screen and (min-width: 800px) {
